--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -103,7 +103,7 @@ const isActive = (path: string) => {
     bottom: -2px;
     left: 0;
     height: 1px;
-    background: red !important;
+    background: var(--primary-color) !important;
     width: 100% !important;
   }
 
