--- a/src/components/shared/Navigation.astro
+++ b/src/components/shared/Navigation.astro
@@ -48,11 +48,11 @@ const isActive = (path: string) => {
   }
 
   a:hover {
-    color: var(--color-text);
+    color: var(--text-color);
   }
 
   a.active {
-    color: var(--color-text) !important;
+    color: var(--text-color) !important;
   }
 
   a.active::after {
@@ -62,6 +62,6 @@ const isActive = (path: string) => {
     left: 0;
     width: 100%;
     height: 1px;
-    background: var(--text-muted);
+    background: var(--primary-color);
   }
 </style>
