兼容手机设备

--- a/src/components/layout/ListLayout.astro
+++ b/src/components/layout/ListLayout.astro
@@ -24,12 +24,12 @@ const { title, description } = Astro.props;
 
 <style>
   .hero {
-    padding: 4rem 0;
+    padding: 4rem 1.5rem;
   }
 
   @media (max-width: 640px) {
     .hero {
-      padding: 3rem 0;
+      padding: 3rem 1.5rem;
     }
   }
 </style>
